overflow issue

--- a/src/styles/tanzania/chapter1.scss
+++ b/src/styles/tanzania/chapter1.scss
@@ -1,5 +1,5 @@
-body{
-  overflow-x: hidden;
+html{
+  overflow-y: hidden;
 }
 
 .section-container{
